# ChangeLog for x11-base/xorg-x11
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-x11/ChangeLog,v 1.304 2005/01/25 18:35:04 fmccor Exp $

  25 Jan 2005; Ferris McCormick <fmccor@gentoo.org> xorg-x11-6.8.1.902.ebuild:
  Add ~sparc keyword for testing --- builds and runs for me.  Track for sparc
  at Bug 79467.

  24 Jan 2005; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.1.902-r1.ebuild:
  Update TODO.

  24 Jan 2005; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.1.902-r1.ebuild:
  libGLU symlink was only done on ! use opengl, which seems as if it's reversed.

  24 Jan 2005; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.1.902-r1.ebuild:
  Functionalize src_install(). Rename a number of poorly named functions that
  e.g., have setup_ in the name but happen in src_install().

  24 Jan 2005; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.1.902-r1.ebuild:
  Functionalize pkg_preinst(), pkg_postinst(), pkg_postrm().

  24 Jan 2005; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.1.902-r1.ebuild:
  Functionalize pkg_setup(), src_unpack(), src_compile().

  24 Jan 2005; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.1.902.ebuild:
  Drop unnecessary, unused cruft and update TODO.

*xorg-x11-6.8.1.902-r1 (24 Jan 2005)

  24 Jan 2005; Donnie Berkholz <spyderous@gentoo.org>;
  +xorg-x11-6.8.1.902-r1.ebuild:
  Add -* so we get CVS history of gradual changes instead of changing 500
  lines in a revision bump all at once.

  23 Jan 2005; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.1.902.ebuild:
  Pull a bunch of implied Mesa optimizations.

  22 Jan 2005; Markus Rothe <corsair@gentoo.org> xorg-x11-6.8.1.902.ebuild:
  removed ppc64 specific functions pkg_prerm() and relink_dlloader_files() as
  they are no longer needed

  21 Jan 2005; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.0-r4.ebuild, xorg-x11-6.8.1.901-r1.ebuild,