@@ -1,15 +1,15 @@
-MD5 fdea7f53e41be3dfda7734968d7884d9 ChangeLog 72306
+MD5 a31252ad8f952c82da18e8c28d3b7b87 ChangeLog 72547
 MD5 ac1137a20503dcb8f9ba2939a2a766f6 metadata.xml 230
 MD5 a8051c491706514a17657504c7d5ba69 xorg-x11-6.7.0-r3.ebuild 38098
-MD5 c0d41a324fbeec16bd3fba37971f5086 xorg-x11-6.8.1.902-r1.ebuild 50809
 MD5 e33b194fdfcdaa928956aa1e5e937b72 xorg-x11-6.8.0-r3.ebuild 40114
 MD5 c0f8e417ca09b7e0a6cb0df5345c9ade xorg-x11-6.8.0-r4.ebuild 52258
 MD5 964bf2fe7bbddb6eab73140faa911397 xorg-x11-6.8.1.901-r1.ebuild 52453
-MD5 10bf8e6194a7ef3b34ba5d448b3ae9fa xorg-x11-6.8.1.902.ebuild 50163
-MD5 b59b9e9b5fe5a900264d9e6766a4b3f9 files/digest-xorg-x11-6.8.1.902-r1 517
+MD5 67d85a2c027b1f4a2c0cc89a1d149232 xorg-x11-6.8.1.902-r1.ebuild 50716
+MD5 ce42c938819216d0ca122f33b4d2b8ab xorg-x11-6.8.1.902.ebuild 50073
 MD5 a3314fbdc270d7d84ea14fd477b8d048 files/digest-xorg-x11-6.7.0-r3 904
 MD5 70facbdb85b7ef2bc9b9b702442eda7e files/digest-xorg-x11-6.8.0-r3 908
 MD5 fa94b81b33045020143c8d9ded15a3ac files/digest-xorg-x11-6.8.0-r4 911
-MD5 f14e22fa0891e99c1000c0d61d7e8a0c files/xpm-secfix-thomas.diff 55674
 MD5 31a8fa39480a7053afd4ebd7493c09c4 files/digest-xorg-x11-6.8.1.901-r1 517
 MD5 b59b9e9b5fe5a900264d9e6766a4b3f9 files/digest-xorg-x11-6.8.1.902 517
+MD5 b59b9e9b5fe5a900264d9e6766a4b3f9 files/digest-xorg-x11-6.8.1.902-r1 517
+MD5 f14e22fa0891e99c1000c0d61d7e8a0c files/xpm-secfix-thomas.diff 55674
